 - [ADDED]		Lables for SimpleGraphViews
 - [CHANGED]	Application view set to portrait
 - [ADDED]		Removed the ToggleButton to switch views and instead using a ViewFlipper
 - [ADDED]		Fix for exception in Chart view if there are no messages
 - [CHANGED]	Change in Layout
 
MessageCounter 1.2.53 [Feb 2013]
 - [FIXED]		Contact images for contacts without images
 - [FIXED]		Errors in calcualtion of Message Counts for chart
 
MessageCounter 1.2.58 [Feb 2013]
 - [ADDED]		QuickContactBadge instead of Contact Image
 - [ADDED]		MaxRowsCount for Chart
 - [ADDED]		Color themes for the chart in library
 - [FIXED]		Correction for message count calculation
 - [ADDED]		Inbox as well as all message count
 - [CHANGED]	Sorted the list in the chart based on the value
 
 ------------------------------------
 
MessageCounter 2.0.57 [May 2013]
 - [CHANGED]	Min SDK Version is 11, for ViewPager and Fragment Support
 - [ADDED]		Using Fragments instead of ViewFlipper
 - [CHANGED]	MainActivity so as to hold data for fragments
 - [ADDED]		Fragments for Chart and List
 - [ADDED]		List View is now Sorted based on messages sent by each user 
 - [CHANGED]	Circular Progress bar style
 - [REMOVED]	Removed Progressbars from fragments
 - [CHANGED]	Added Progress Dialog in MainActivity 
 - [ADDED]		Added Apache Licence, Version 2.0
 
MessageCounter 2.0.64 [July 2013]
 - [OPTIMIZED]	General Optimizations 
 - [ADDED]		Added license popup
 - [FIXED]		No data shown on orientation change
 - [ADDED]		Added title with count of top message senders for the chart fragment
 - [ADDED]		Added an imporved icon for the launcher
 - [ADDED]		Minor styles for total message count
 - [CHANGED]	Reworded some strings to make it better
 - [REMOVED]	Removed some debug log statements

MessageCounter 2.0.68 [July 2013]
 - [CHANGED]	Change in the way contact info is read from sms table in the library
 - [CHANGED]	Minor optimizations for Chart Display page
 - [FIXED]		Fixed a chart value calculation error