@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <lint>
     <issue id="DefaultLocale" severity="ignore" />
+    <issue id="InconsistentLayout">
+        <ignore path="res/layout/activity_main.xml" />
+    </issue>
 </lint>
