@@ -1,11 +1,10 @@
 <resources>
 
-    <string name="title_section3">Section 3</string>
     <string name="title_section2">Chart</string>
     <string name="title_section1">List</string>
     
     <string name="app_name">MessageCounter</string>
-    <string name="app_version">Version 2.0.68 (July 2013)</string>
+    <string name="app_version">Version 2.0.80 (July 2013)</string>
     <string name="app_desc">Message Counter displays the number of messages in your inbox, message counts from your contacts.</string>
 	<string name="app_disclaim">Disclaimer: This app is created for educational purposes and as such has no guarantee or support. Since undocumented Android APIs are used, this app may not work as expected on all devices.</string>
 	<string name="app_developer_info">Designed &amp; developed at ae labs</string>
@@ -18,12 +17,10 @@
     <string name="menu_about">About</string>
     <string name="menu_license">License</string>
     
-    <string name="contact_photo">Contact Photo</string>
     <string name="empty_text"></string>
     <string name="empty_list">No messages found</string>
     
     <string name="message_count_inbox">%s messages received</string>
-    <string name="message_count_outbox">Messages in sent box : %s</string>
     <string name="message_count_all">%s Messages in total</string>
     <string name="message_loading">Loading data, please wait.</string>
     
